; ModuleID = '/home/carl/AnghaBench/vim.js/src/extr_if_python.c_LineToString.c'
source_filename = "/home/carl/AnghaBench/vim.js/src/extr_if_python.c_LineToString.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i8*)* @LineToString to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @LineToString(i8* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i8*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  store i8* %0, i8** %3, align 8
  %7 = load i8*, i8** %3, align 8
  %8 = call i32 @strlen(i8* %7)
  store i32 %8, i32* %5, align 4
  %9 = load i32, i32* %5, align 4
  %10 = call i32* @PyString_FromStringAndSize(i32* null, i32 %9)
  store i32* %10, i32** %4, align 8
  %11 = load i32*, i32** %4, align 8
  %12 = icmp eq i32* %11, null
  br i1 %12, label %13, label %14

13:                                               ; preds = %1
  store i32* null, i32** %2, align 8
  br label %39

14:                                               ; preds = %1
  %15 = load i32*, i32** %4, align 8
  %16 = call i8* @PyString_AsString(i32* %15)
  store i8* %16, i8** %6, align 8
  br label %17

17:                                               ; preds = %32, %14
  %18 = load i8*, i8** %3, align 8
  %19 = load i8, i8* %18, align 1
  %20 = icmp ne i8 %19, 0
  br i1 %20, label %21, label %37

21:                                               ; preds = %17
  %22 = load i8*, i8** %3, align 8
  %23 = load i8, i8* %22, align 1
  %24 = sext i8 %23 to i32
  %25 = icmp eq i32 %24, 10
  br i1 %25, label %26, label %28

26:                                               ; preds = %21
  %27 = load i8*, i8** %6, align 8
  store i8 0, i8* %27, align 1
  br label %32

28:                                               ; preds = %21
  %29 = load i8*, i8** %3, align 8
  %30 = load i8, i8* %29, align 1
  %31 = load i8*, i8** %6, align 8
  store i8 %30, i8* %31, align 1
  br label %32

32:                                               ; preds = %28, %26
  %33 = load i8*, i8** %6, align 8
  %34 = getelementptr inbounds i8, i8* %33, i32 1
  store i8* %34, i8** %6, align 8
  %35 = load i8*, i8** %3, align 8
  %36 = getelementptr inbounds i8, i8* %35, i32 1
  store i8* %36, i8** %3, align 8
  br label %17

37:                                               ; preds = %17
  %38 = load i32*, i32** %4, align 8
  store i32* %38, i32** %2, align 8
  br label %39

39:                                               ; preds = %37, %13
  %40 = load i32*, i32** %2, align 8
  ret i32* %40
}

declare dso_local i32 @strlen(i8*) #1

declare dso_local i32* @PyString_FromStringAndSize(i32*, i32) #1

declare dso_local i8* @PyString_AsString(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
